feat: improve mobile responsiveness and UI enhancements
- Made form page more compact on mobile
- Reduced navbar height to 56px on mobile
- Added full-screen mobile menu with navigation links
- Fixed volunteer year alignment to far right
- Improved mobile navbar styling with better alignment
- Updated form spacing and padding for mobile
- Enhanced mobile menu with Home, About, Contact links
- Made navbar fully opaque on mobile for better visibility

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="apple-touch-icon" href="/resume-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ResumeNow - Professional Resume Builder</title>
+    
+    <!-- Google Fonts - Ubuntu -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&family=Ubuntu+Mono:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
